Fixing some footer layout issues

--- a/_src/static/css/responsive.css
+++ b/_src/static/css/responsive.css
@@ -862,6 +862,7 @@ div.intro img.bro {
   width: 375px;
   float: right;
   margin-right: 0;
+
   position: relative;
   right: 1%;
   z-index: -5;
@@ -899,7 +900,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 375px;
   float: right;
   margin-right: 0;
-  bottom: -30px;
   position: relative;
   right: 1%;
   z-index: -5;
@@ -915,7 +915,6 @@ div.intro img.bro {
   width: 375px;
   float: right;
   margin-right: 0;
-  bottom: -40px;
   position: relative;
   right: 1%;
   z-index: -5;
